--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#firebase
+.firebase
+.firebaserc
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+yarn.lock
 
 # testing
 /coverage
